1. fix(#176): fix the bad behaviour within the initializations of the username and password of connection factory 2. add ConnectionPoolConfigurationCustomizer for customizing ConnectionPool programmatically 3. add default method named of 'Optional<String> routingName()' for both ConnectionFactoryOptionsCustomizer and ConnectionPoolConfigurationCustomizer