@@ -20,6 +20,8 @@ import io.r2dbc.pool.ConnectionPoolConfiguration;
 import io.r2dbc.spi.ConnectionFactories;
 import io.r2dbc.spi.ConnectionFactory;
 import io.r2dbc.spi.ConnectionFactoryOptions;
+import io.r2dbc.spi.ConnectionFactoryOptions.Builder;
+import io.r2dbc.spi.Option;
 import io.r2dbc.spi.ValidationDepth;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.ibatis.annotations.Mapper;
@@ -83,6 +85,7 @@ import pro.chenggang.project.reactive.mybatis.support.r2dbc.spring.mapper.R2dbcM
 import pro.chenggang.project.reactive.mybatis.support.r2dbc.spring.properties.R2dbcMybatisConnectionFactoryProperties;
 import pro.chenggang.project.reactive.mybatis.support.r2dbc.spring.properties.R2dbcMybatisProperties;
 import pro.chenggang.project.reactive.mybatis.support.r2dbc.spring.support.ConnectionFactoryOptionsCustomizer;
+import pro.chenggang.project.reactive.mybatis.support.r2dbc.spring.support.ConnectionPoolConfigurationCustomizer;
 import pro.chenggang.project.reactive.mybatis.support.r2dbc.spring.support.R2dbcMybatisConfigurationCustomizer;
 import reactor.core.publisher.Flux;
 
@@ -91,6 +94,7 @@ import java.io.IOException;
 import java.lang.reflect.Modifier;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -140,20 +144,31 @@ public class R2dbcMybatisAutoConfiguration {
     @ConditionalOnMissingBean(ConnectionFactory.class)
     @Bean(destroyMethod = "dispose")
     public ConnectionPool connectionFactory(R2dbcMybatisConnectionFactoryProperties r2dbcMybatisConnectionFactoryProperties,
-                                            ObjectProvider<ConnectionFactoryOptionsCustomizer> connectionFactoryOptionsCustomizerProvider) {
-        String determineConnectionFactoryUrl = r2dbcMybatisConnectionFactoryProperties.determineConnectionFactoryUrl();
-        Assert.notNull(determineConnectionFactoryUrl, "R2DBC Connection URL must not be null");
-        ConnectionFactoryOptions connectionFactoryOptions = ConnectionFactoryOptions.parse(determineConnectionFactoryUrl);
+                                            ObjectProvider<ConnectionFactoryOptionsCustomizer> connectionFactoryOptionsCustomizerProvider,
+                                            ObjectProvider<ConnectionPoolConfigurationCustomizer> connectionPoolConfigurationCustomizerProvider) {
+        String r2dbcUrl = r2dbcMybatisConnectionFactoryProperties.getR2dbcUrl();
+        Assert.notNull(r2dbcUrl, "R2DBC Connection URL must not be null");
+        Builder connectionFactoryOptionsBuilder = ConnectionFactoryOptions.parse(r2dbcUrl).mutate();
+        if (Objects.nonNull(r2dbcMybatisConnectionFactoryProperties.getUsername())) {
+            connectionFactoryOptionsBuilder.option(ConnectionFactoryOptions.USER, r2dbcMybatisConnectionFactoryProperties.getUsername());
+        }
+        if (Objects.nonNull(r2dbcMybatisConnectionFactoryProperties.getPassword())) {
+            connectionFactoryOptionsBuilder.option(ConnectionFactoryOptions.PASSWORD, r2dbcMybatisConnectionFactoryProperties.getPassword());
+        }
+        if (!CollectionUtils.isEmpty(r2dbcMybatisConnectionFactoryProperties.getOptions())) {
+            r2dbcMybatisConnectionFactoryProperties.getOptions()
+                    .forEach((key, value) -> {
+                        connectionFactoryOptionsBuilder.option(Option.valueOf(key), value);
+                    });
+        }
         //ConnectionFactoryOptionsCustomizer
         List<ConnectionFactoryOptionsCustomizer> connectionFactoryOptionsCustomizers = connectionFactoryOptionsCustomizerProvider
                 .orderedStream()
-                .collect(Collectors.toList());
+                .toList();
         if (!CollectionUtils.isEmpty(connectionFactoryOptionsCustomizers)) {
-            ConnectionFactoryOptions.Builder builder = connectionFactoryOptions.mutate();
-            connectionFactoryOptionsCustomizers.forEach(connectionFactoryOptionsCustomizer -> connectionFactoryOptionsCustomizer.customize(
-                    builder));
-            connectionFactoryOptions = builder.build();
+            connectionFactoryOptionsCustomizers.forEach(customizer -> customizer.customize(connectionFactoryOptionsBuilder));
         }
+        ConnectionFactoryOptions connectionFactoryOptions = connectionFactoryOptionsBuilder.build();
         ConnectionFactory connectionFactory = ConnectionFactories.get(connectionFactoryOptions);
         if (connectionFactory instanceof ConnectionPool) {
             return (ConnectionPool) connectionFactory;
@@ -175,6 +190,11 @@ public class R2dbcMybatisAutoConfiguration {
             builder.validationQuery(pool.getValidationQuery());
         } else {
             builder.validationDepth(ValidationDepth.LOCAL);
+        }
+        List<ConnectionPoolConfigurationCustomizer> poolConfigurationCustomizers = connectionPoolConfigurationCustomizerProvider.orderedStream()
+                .toList();
+        if(!CollectionUtils.isEmpty(poolConfigurationCustomizers)) {
+            poolConfigurationCustomizers.forEach(customizer -> customizer.customize(builder));
         }
         ConnectionPool connectionPool = new ConnectionPool(builder.build());
         log.info("Initialize Connection Pool Success");
